apps/api/classting-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: classting-api
  namespace: api
  labels:
    app: classting-api
spec:
  selector:
    matchLabels:
      app: classting-api
  template:
    metadata:
      labels:
        app: classting-api
    spec:
      containers:
      - name: classting-api
        image: hyeonwoo5342/classting-api:1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: '200Mi'
            cpu: '100m'
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 40
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 25
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
