apps/api/classting-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: classting-api
  namespace: api
  labels:
    app: classting-api
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: classting-api
